--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@react-oauth/google": "^0.11.1",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
     "lucide-react": "^0.503.0",
